--- a/found.html
+++ b/found.html
@@ -52,6 +52,10 @@
         <div class="registration">
             Enter the date you found: <input type="date" class="personal" id="date">
         </div>
+                <div class="registration">
+            Upload photo:📷 <input type="image" class="personal" id="">
+         </div>
+         <br>
         <div class="registration">
             <input type="submit" value="sumbit now" class="personal">
          </div>
@@ -59,7 +63,7 @@
 </section>
     <hr>
     <!-- lost things list dattebayo -->
-    <div><h1>⭐These things have been found if it belongs to you,contact undersigned:)</h1></div>
+    <div><h1>⭐These things have been found😍if it belongs to you,contact undersigned:)</h1></div>
     <section class="op" style="background-image: url(78.png);">
         <span>
     <div class="lost1">
